--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -20,6 +20,7 @@ jobs:
       FORMAT: csv
       FULL_REPORT: true
       INCLUDE_ALL: true
+      OUT_DIR: /logs
     runs-on: ubuntu-20.04
     
     steps:
