--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -17,10 +17,10 @@ jobs:
       FORMAT: csv
       FULL_REPORT: true
       INCLUDE_ALL: true
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup python
         uses: actions/setup-python@v4
         with:
@@ -78,7 +78,7 @@ jobs:
           git push
   Success:
     name: Send success notification
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [Update-repo]
     # runs only if last job was successful
     if: ${{ contains(join(needs.*.result, ','), 'success') }}
