--- a/.github/workflows/scheduled_job.yaml
+++ b/.github/workflows/scheduled_job.yaml
@@ -8,7 +8,7 @@ env:
   REPO_OWNER: ${{ github.repository_owner }}
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
-  NUCLEI_VERSION: '2.8.8'
+  NUCLEI_VERSION: '3.2.5'
   POETRY_VERSION: '1.8.2'
 jobs:
   Project-runner:
@@ -30,7 +30,7 @@ jobs:
           architecture: x64
           token: ${{ github.token }}
       - name: Install nuclei
-        # fetch nuclei v2.7.7 binary, unzip and add to path
+        # fetch nuclei binary, unzip and add to path
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -54,7 +54,7 @@ jobs:
           retention-days: 1
   Update-repo:
     name: Update report repository
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs: [Project-runner]
     steps:
       - name: fetch repo
@@ -141,7 +141,7 @@ jobs:
             }
   Failure:
     name: Send Failure notification
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs: [Success]
     if: always()
     steps:
