--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,10 +25,10 @@ jobs:
       # fetch nuclei v2.7.7 binary, unzip and add to path
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NUCLEI_VERSION: '2.8.8'
+        NUCLEI_VERSION: '3.2.5'
       run: |
         gh release download -R projectdiscovery/nuclei v${{ env.NUCLEI_VERSION }} -p \"nuclei_${{ env.NUCLEI_VERSION }}_linux_amd64.zip\" -O nuclei.zip
-        unzip nuclei.zip
+        unzip nuclei.zip nuclei
         rm nuclei.zip
         echo "$PWD" >> "$GITHUB_PATH"
         ./nuclei -ut
